[package]
name = "bjourn"
version = "0.2.0"
edition = "2021"
authors = ["Mike Valstar <mike@valstar.dev>"]
license = "MIT"
description = "A simple command line bullet list tool"
homepage = "https://bjourn.com"
readme = "README.md"
repository = "https://github.com/mikevalstar/bjourn"
keywords = ["bullet", "journal", "list", "cli"]
categories = ["command-line-utilities"]

[dependencies]
homedir = "0.3.4"
rusqlite = "0.32.1"
nanoid = "0.4.0" 
chrono = "0.4.39"
exitcode = "1.1.2"
colored = "2.2.0"
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
assert_cmd = "2.0.16"